# error_detection

./: .pre-commit-config.yaml  LICENSE  README.md  error_detect.py  pyproject.toml
src/: classification.py  create_balance.py  error_detect.py
src/data/: data_scam.csv  spam_ham_dataset.csv
src/out_data/: 27f72fb5_cce2_11ed_8cfd_04421a29ab6f.csv  300674fb_cce4_11ed_aa04_04421a29ab6f.csv  721d5c1a_cdad_11ed_aaaa_04421a29ab6f.csv  b267908e_cce8_11ed_9ae1_04421a29ab6f.csv  bb8d9f34_ce5d_11ed_9329_04421a29ab6f.csv  cbb6e73c_cce9_11ed_9fce_04421a29ab6f.csv  dfdccc3f_cecf_11ed_9736_04421a29ab6f.csv
test/: test_create_balance.py
