[tool.poetry]
name = "error-detection"
version = "0.1.0"
description = "An NLP tool for error detection for manually labelled files"
authors = ["edbezci <ebbezci@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include="src", from="." },
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
sklearn = "^0.0.post1"
spacy = "^3.5.1"


[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.1"
black = "^22.3b2"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.poetry-dynamic-versioning]
version_format = "{version}"
include = "^src/.*"

[tool.pre-commit]
hooks = [
    "black",
    "isort"
]

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
